@@ -1,13 +1,16 @@
 package ua.in.kp.service;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.JsonProcessingException;
 import com.github.fge.jsonpatch.JsonPatch;
+import com.github.fge.jsonpatch.JsonPatchException;
 import io.micrometer.core.instrument.Gauge;
 import io.micrometer.core.instrument.MeterRegistry;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
+import org.springframework.security.core.Authentication;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
@@ -23,12 +26,10 @@ import ua.in.kp.mapper.ProjectMapper;
 import ua.in.kp.repository.ProjectRepository;
 import ua.in.kp.repository.SubscriptionRepository;
 import ua.in.kp.repository.TagRepository;
+import ua.in.kp.repository.UserRepository;
 import ua.in.kp.util.PatchUtil;
 
-import java.util.Collection;
-import java.util.List;
-import java.util.Optional;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -42,12 +43,13 @@ public class ProjectService {
     private final SubscriptionRepository subscriptionRepository;
     private final EmailServiceKp emailService;
     private final Translator translator;
+    private final UserRepository userRepository;
     private final MeterRegistry meterRegistry;
 
-    public ProjectService(ProjectRepository projectRepository, ProjectMapper projectMapper, ObjectMapper objectMapper,
+    public ProjectService(ProjectRepository projectRepository, ProjectMapper projectMapper,
                           UserService userService, TagRepository tagRepository, S3Service s3Service,
                           SubscriptionRepository subscriptionRepository, EmailServiceKp emailService,
-                          Translator translator, MeterRegistry meterRegistry) {
+                          Translator translator, UserRepository userRepository, MeterRegistry meterRegistry) {
         this.projectRepository = projectRepository;
         this.projectMapper = projectMapper;
         this.userService = userService;
@@ -56,6 +58,7 @@ public class ProjectService {
         this.subscriptionRepository = subscriptionRepository;
         this.emailService = emailService;
         this.translator = translator;
+        this.userRepository = userRepository;
         this.meterRegistry = meterRegistry;
 
         Gauge.builder("projects_count", projectRepository::count)
@@ -94,12 +97,30 @@ public class ProjectService {
         return projectMapper.toDto(projectEntity);
     }
 
-    public Page<GetAllProjectsDto> getAllProjects(Pageable pageable) {
+    public Page<GetAllProjectsDto> getAllProjects(Pageable pageable, Authentication auth) {
         Page<ProjectEntity> page = projectRepository.findAll(pageable);
         log.info("Got all projects from projectRepository.");
-        Page<GetAllProjectsDto> toReturn = page.map(projectMapper::getAllToDto);
-        log.info("Mapped all projectsEntity to DTO and returned a page with them.");
+        Page<GetAllProjectsDto> toReturn = page.map(project -> {
+
+            boolean isFollowed = checkIsFollowed(project, auth);
+            GetAllProjectsDto dto = projectMapper.projectEntityToGetAllDto(project);
+            dto.setFollowed(isFollowed);
+            return dto;
+        });
+        log.info("Map all projectsEntity to DTO and return page with them.");
         return toReturn;
+    }
+
+    private boolean checkIsFollowed(ProjectEntity project, Authentication auth) {
+        if (SecurityContextHolder.getContext().getAuthentication() != null) {
+            Optional<UserEntity> userOpt = userRepository.findByEmail(auth.getName());
+            if (userOpt.isPresent()) {
+                UserEntity user = userOpt.get();
+                log.info("User {} is followed on project {}", user.getEmail(), project.getTitle());
+                return subscriptionRepository.existsByUserIdAndProjectId(user.getId(), project.getProjectId());
+            }
+        }
+        return false;
     }
 
     @Transactional(readOnly = true)
@@ -130,8 +151,12 @@ public class ProjectService {
                                     return new ApplicationException(HttpStatus.NOT_FOUND, translator.getLocaleMessage(
                                             "exception.project.not-found", "url", url));
                                 });
+
+        boolean isFollowed = checkIsFollowed(projectEntity, SecurityContextHolder.getContext().getAuthentication());
         log.info("Project with url {} retrieved.", projectEntity.getUrl());
-        return projectMapper.toDto(projectEntity);
+        ProjectResponseDto dto = projectMapper.toDto(projectEntity);
+        dto.setFollowed(isFollowed);
+        return dto;
     }
 
     @Transactional(readOnly = true)
@@ -169,17 +194,27 @@ public class ProjectService {
         return projectRepository.findAllByOwner(userEntity, pageable);
     }
 
-    public SubscribeResponseDto subscribeUserToProject(String projectId) {
-        String userId = userService.getAuthenticated().getId();
+    public SubscribeResponseDto subscribeUserToProject(String projectId, Authentication auth) {
+        UserEntity user = getCurrentUser(auth);
         String projUrl = getProjectUriIfExist(projectId);
         Optional<ProjectSubscribeEntity> existingSubscription =
-                subscriptionRepository.findByUserIdAndProjectId(userId, projectId);
+                subscriptionRepository.findByUserIdAndProjectId(user.getId(), projectId);
         if (existingSubscription.isPresent()) {
             return new SubscribeResponseDto("User is already subscribed to project " + projectId);
         } else {
             saveSubscription(projectId);
-            emailService.sendProjectSubscriptionMessage(projectId, projUrl);
+            emailService.sendProjectSubscriptionMessage(projectId, projUrl, user);
             return new SubscribeResponseDto("User subscribed to project " + projectId + " successfully");
+        }
+    }
+
+    private UserEntity getCurrentUser(Authentication auth) {
+        Optional<UserEntity> userOpt = userRepository.findByEmail(auth.getName());
+        if (userOpt.isPresent()) {
+            return userOpt.get();
+        } else {
+            throw new ApplicationException(HttpStatus.BAD_REQUEST,
+                    translator.getLocaleMessage("exception.user.not-found", auth.getName()));
         }
     }
 
@@ -223,7 +258,7 @@ public class ProjectService {
         List<ProjectSubscribeEntity> listUsers = subscriptionRepository.findUserIdsByProjectId(projectId);
         List<ProjectSubscribeDto> usersId = listUsers.stream()
                 .map(projectMapper::toDtoSubscribe)
-                .collect(Collectors.toList());
+                .toList();
 
         log.info("List subscribers {}", usersId);
         return usersId;
@@ -235,6 +270,7 @@ public class ProjectService {
         Optional<ProjectSubscribeEntity> existingSubscription =
                 subscriptionRepository.findByUserIdAndProjectId(user.getId(), projectId);
         if (existingSubscription.isEmpty()) {
+            log.warn("User {} is not yet subscribed to project with id {}", user.getUsername(), projectId);
             throw new ApplicationException(
                     HttpStatus.NOT_FOUND,
                     translator.getLocaleMessage("exception.project.not-subscribe",
@@ -248,15 +284,48 @@ public class ProjectService {
                 user.getUsername(), projectId));
     }
 
+    public Page<GetAllProjectsDto> getProjectByIds(List<String> projectIds, Pageable pageable) {
+        return projectRepository.findByProjectIds(projectIds, pageable)
+                .map(projectMapper::getAllToDto);
+    }
+
+    @Transactional
     public ProjectChangeDto updateProjectData(String projectId, JsonPatch patch) {
         UserEntity user = userService.getAuthenticated();
-        log.info("update profile data by projectId {}", projectId);
+        log.info("update project data by projectId {}", projectId);
         ProjectEntity projectEntity = projectRepository.findByOwnerAndProjectId(user, projectId)
                 .orElseThrow(() -> new ApplicationException(HttpStatus.NOT_FOUND,
                         String.format("User %s does not have project with id %s", user.getUsername(), projectId)));
         ProjectChangeDto projectDto = projectMapper.toChangeDto(projectEntity);
-        ProjectChangeDto patchedDto = PatchUtil.applyPatch(patch, projectDto, ProjectChangeDto.class);
-        ProjectEntity updatedUser = projectRepository.save(projectMapper.changeDtoToEntity(patchedDto, projectEntity));
+        ProjectChangeDto patchedDto;
+        try {
+            patchedDto = PatchUtil.applyPatch(patch, projectDto, ProjectChangeDto.class);
+        } catch (JsonPatchException | JsonProcessingException e) {
+            log.warn("cannot update project data by projectId {}", projectId);
+            throw new ApplicationException(HttpStatus.BAD_REQUEST,
+                    translator.getLocaleMessage("exception.project.cannot-updated"));
+        }
+        List<String> changedFields = findChangedFields(projectDto, patchedDto);
+        patchedDto.tags().forEach(tag -> tagRepository.saveByNameIfNotExist(tag.toLowerCase()));
+        ProjectEntity updatedProject = projectMapper.changeDtoToEntity(patchedDto, projectEntity);
+        ProjectEntity updatedUser = projectRepository.save(updatedProject);
+        emailService.sendProjectUpdateEmail(projectId, changedFields, updatedUser);
         return projectMapper.toChangeDto(updatedUser);
+    }
+
+    private List<String> findChangedFields(ProjectChangeDto originalDto, ProjectChangeDto patchedDto) {
+        List<String> changedFields = new ArrayList<>();
+
+        if (!Objects.equals(originalDto.title(), patchedDto.title())) {
+            changedFields.add("Значення поля 'Назва проекту' змінено на " + patchedDto.title());
+        }
+        if (!Objects.equals(originalDto.description(), patchedDto.description())) {
+            changedFields.add("Значення поля 'Опис' змінено на " + patchedDto.description());
+        }
+        if (!Objects.equals(originalDto.tags(), patchedDto.tags())) {
+            changedFields.add("Значення поля 'Теги' змінено на" + patchedDto.tags());
+        }
+
+        return changedFields;
     }
 }
